fixed blur and made words that rhyme lump together
fixed text being blurry on high dpi monitors
words that rhyme lump together

todo: make words fall constantly.

--- a/style.css
+++ b/style.css
@@ -5,6 +5,5 @@ body {
 }
 
 canvas {
-    display: block;
     background-color: white;
 }
